--- a/styles/_subheader.scss
+++ b/styles/_subheader.scss
@@ -15,7 +15,7 @@
         &__description {
             font-size: 8rem;
             font-weight: 700;
-            color: $text-color-contr;
+            color: $text-color-blc;
             text-transform: uppercase;
             letter-spacing: 2rem;            
             @include media-breakpoint-down(lg){
