--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -1,24 +1,19 @@
 $fa-font-path: '../fonts/font-awesome';
 
-// Bootstrap
-$font-size-root: 10px;
-$font-size-base: 1.6rem;
-
-// Site font sizes
-$size-primary: 3rem;
-$size-secondary: 2rem;
-$size-tertiary: 1.6rem;
-$size-min: 1.5rem;
-
 // Site colors
-$main-color: rgb(0, 0, 0);
-$primary-color: #133858;
-$secondary-color: #e2c52d;
+$primary-color: #0087FE;
+$prim-hover-color: #0E75EA;
+$sec-hover-color: #FFFFFF66;
+$disabled-color: #BBBBB8;
+$secondary-color: #000;
 $tertiary-color: #1b1b1b;
-$text-color: #000;
-$text-color-contr: #fff;
+$text-color-blc: #000;
+$text-color-wht: #fff;
+$text-color-dsb: #5F5F5C;
 $hero-txt-bcg: #2f2f2f83;
 $bcg-color: #2da9e233;
+$color-black: #000;
+$color-white: #fff;
 
 $scrollbar-color: #c4c4c4;
 $scrollbar-color-hover: #aaaaaa;
