--- a/styles/main.scss
+++ b/styles/main.scss
@@ -3,11 +3,15 @@
 @import "bootstrap";
 @import "slick-carousel/slick/slick";
 
+@import 'blog';
 @import 'buttons';
 @import 'footer';
 @import 'header';
 @import 'hero';
+@import 'report';
+@import 'services';
 @import 'style';
 @import 'subheader';
+@import 'tools';
 
 
