--- a/styles/style.scss
+++ b/styles/style.scss
@@ -19,42 +19,90 @@ body::-webkit-scrollbar-thumb {
   }
 // end scrollbar styling
 
-// Text styling start
-html, body {
-  font-family: 'Open sans', sans-serif !important;
-  scroll-behavior: smooth;
-  h2 {
-    font-size: $size-primary;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: $primary-color;
-  }
-  h3 {
-    font-size: $size-secondary;
-  }
-  p {
-    font-size: $size-tertiary;
-  }
-  hr {
-    color: $secondary-color;
-    width: 15rem;
-    border: 2px solid $secondary-color;
-    opacity: 1;
-    margin: 1rem auto;
-  }
-}
+// Font import
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
+@import url('https://fonts.cdnfonts.com/css/hk-groteks');
 
-@include media-breakpoint-down(lg){
-  html, body {
+// Text styling start
+
+html, body {
+  font-family: 'Mulish', sans-serif !important;
+  font-style: normal !important;
+  scroll-behavior: smooth;
+    h1 {    
+      font-weight: 700;
+      font-size: 2.5rem;
+      line-height: 3.75rem;
+    }
     h2 {
-      font-size: 3rem;
+      font-weight: 700;
+      font-size: 2rem;
+      line-height: 3rem;
     }
     h3 {
-      font-size: 2rem;
+      font-weight: 700;
+      font-size: 1.5rem;
+      line-height: 2.25rem;
     }
     p {
+      font-weight: 700;
+      font-size: 1.25rem;
+      line-height: 2rem;
+      margin-bottom: 0;
+    }
+    .font-sm {
+      font-size: 0.875rem;
+      font-weight: 400;
+      line-height: 1.25rem;
+    }
+  @include media-breakpoint-down(xl) {
+    h1 {    
+      font-weight: 700;
+      font-size: 2.5rem;
+      line-height: 3.75rem;
+    }
+    h2 {
+      font-weight: 700;
+      font-size: 2rem;
+      line-height: 3rem;
+    }
+    h3 {
+      font-weight: 700;
       font-size: 1.5rem;
+      line-height: 2.25rem;
+    }
+    p {
+      font-weight: 700;
+      font-size: 1.25rem;
+      line-height: 2rem;
     }
   }
+}
+@include media-breakpoint-down(md){
+  html, body {
+    h1 {    
+      font-weight: 700;
+      font-size: 2rem;
+      line-height: 3rem;
+    }
+    h2 {
+      font-weight: 700;
+      font-size: 1.5rem;
+      line-height: 2.25rem;
+    }
+    h3 {
+      font-weight: 700;
+      font-size: 1.25rem;
+      line-height: 2rem;
+    }
+    p {
+      font-weight: 700;
+      font-size: 1rem;
+      line-height: 1.5rem;
+    }
+  }
+}
+.clr-change {
+  color: $primary-color;
 }
 // Text styling end
