Styles, rwd and acf added

--- a/style.css
+++ b/style.css
@@ -3,6 +3,6 @@ Theme Name: GoLizard Template
 Theme URI: https://golizard.pl/
 Author: Jakub Jarosz
 Author URI: https://golizard.pl/
-Description: Basic Golizard template
+Description: Golizard template for Sellace
 Version: 1.2
 */
