--- a/styles/_report.scss
+++ b/styles/_report.scss
@@ -6,6 +6,12 @@
     min-height: 60vh;
     padding: $margin-xxl;
     background: radial-gradient(35.76% 44.26% at 5.1% 7.01%, rgba(0, 135, 254, 0.149164) 0%, rgba(0, 135, 254, 0.2) 0%, rgba(0, 135, 254, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, radial-gradient(45% 104.25% at 85.62% 105.07%, rgba(0, 135, 254, 0.2) 0%, rgba(0, 135, 254, 0) 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, linear-gradient(0deg, #1F1F1D, #1F1F1D), #1F1F1D;
+    @include media-breakpoint-down(md) {
+        padding: $margin-lg;
+    }
+    @include media-breakpoint-down(sm) {
+        padding: $margin-sm;
+    }
 
     &--wrapper {
         display: flex;
@@ -26,6 +32,10 @@
     .report-btn {
         display: flex;
         justify-content: end;
+        @include media-breakpoint-down(sm) {
+            flex-direction: column;
+            align-items: stretch;
+        }
     }
 }
 // End report section styling
