--- a/styles/_buttons.scss
+++ b/styles/_buttons.scss
@@ -1,4 +1,3 @@
-@import 'mixins';
 // Primary button style
 .primary-button {
     font-family: 'Mulish', sans-serif;    
@@ -18,7 +17,7 @@
     color: $text-color-wht;
     padding: 0.75rem 1.5rem;
 }
-@include md {
+@include media-breakpoint-down(md) {
     .primary-button {
         font-size: 0.875rem;
         line-height: 1.25rem;
@@ -29,7 +28,7 @@
         padding: 0.625rem 1.25rem;
     }
 }
-@include sm {
+@include media-breakpoint-down(sm) {
     .primary-button {
         font-size: 0.75rem;
         line-height: 1rem;
@@ -66,7 +65,7 @@
 .secondary-button:hover{
     background-color: $sec-hover-color;
 }
-@include md {
+@include media-breakpoint-down(md) {
     .secondary-button {
         font-size: 0.875rem;
         line-height: 1.25rem;
@@ -76,7 +75,7 @@
         background-color: $sec-hover-color;
     }
 }
-@include sm {
+@include media-breakpoint-down(sm) {
     .secondary-button {
         font-size: 0.75rem;
         line-height: 1rem;
