--- a/styles/_tools.scss
+++ b/styles/_tools.scss
@@ -5,7 +5,19 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    @include media-breakpoint-down(md) {
+        padding: $margin-lg;
+    }
+    @include media-breakpoint-down(sm) {
+        padding: $margin-sm;
+    }
     &--right {
+        @include media-breakpoint-up(sm) {
+            display: block;
+        }
+        @include media-breakpoint-down(sm) {
+            display: none;
+        }
         img {
             width: 100%;
             height: auto;
@@ -32,6 +44,18 @@
                 border-radius: 6.188rem;
                 padding: 0.2rem;
             }
+        }
+    }
+    &--bottom {
+        @include media-breakpoint-up(sm) {
+            display: none;
+        }
+        @include media-breakpoint-down(sm) {
+            display: block;
+        }
+        img {
+            width: 100%;
+            height: auto;
         }
     }
 }
