--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,24 +1,5 @@
 @import "variables";
 
-// start scrollbar styling
-body::-webkit-scrollbar {
-    width: 1rem;
-    background-color: $scrollbar-color;
-  }
-
-body::-webkit-scrollbar:hover {
-    background-color: $scrollbar-color-hover;
-  }
-   
-body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  }
-   
-body::-webkit-scrollbar-thumb {
-    background-color: $primary-color;
-  }
-// end scrollbar styling
-
 // Font import
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
 @import url('https://fonts.cdnfonts.com/css/hk-groteks');
@@ -55,7 +36,7 @@ html, body {
       font-weight: 400;
       line-height: 1.25rem;
     }
-  @include media-breakpoint-down(xl) {
+  @include media-breakpoint-down(md) {
     h1 {    
       font-weight: 700;
       font-size: 2.5rem;
@@ -78,7 +59,7 @@ html, body {
     }
   }
 }
-@include media-breakpoint-down(md){
+@include media-breakpoint-down(sm){
   html, body {
     h1 {    
       font-weight: 700;
@@ -106,3 +87,5 @@ html, body {
   color: $primary-color;
 }
 // Text styling end
+
+
